@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  dev-python/django-csp: Add github to remote-id in metadata.xml
+
   26 Apr 2015; Johann Schmitz <ercpe@gentoo.org> django-csp-2.0.3.ebuild:
   Updated description
 
